--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^123.0.1",
     "@wix/ecom": "^1.0.1209",
     "@wix/essentials": "^0.1.24",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jest": "^27.5.1",
-    "puppeteer": "^19.7.2",
-    "puppeteer-core": "^19.7.2"
+    "puppeteer-core": "^22.15.0"
   },
   "devDependencies": {
     "supertest": "^7.1.1"
