--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jest": "^27.5.1",
+    "playwright": "^1.53.1",
     "puppeteer-core": "^22.15.0"
   },
   "devDependencies": {
